--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3191,6 +3191,63 @@
         "th":"",
         "id":""
     },
+    "item.1224.name":{
+        "en":"Skateboard",
+        "fr":"Skateboard",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1225.name":{
+        "en":"Magic Cloud",
+        "fr":"Nuage Magique",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1226.name":{
+        "en":"Magic Carpet",
+        "fr":"Tapis Magique",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.1300.name":{
         "en":"Dragon Wings",
         "fr":"Ailes de Dragon",
@@ -14589,6 +14646,63 @@
     "item.1220.description":{
         "en":"This mythical creature is the most beautiful someone can get.",
         "fr":"Cette créature mythique est la plus belle que l'on puisse posseder.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1224.description":{
+        "en":"The God of Bur was using this Skateboard back then",
+        "fr":"Le dieu de Bur utilisait ce skateboard à l'époque",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1225.description":{
+        "en":"Many heroes are known for riding this magical creature, it can talk and help you in dangerous situation.",
+        "fr":"De nombreux héros sont connus par ce qu'ils chevauchent cette créature magique, elle peut parler et vous aider dans des situations dangereuses.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1226.description":{
+        "en":"This Carpet have been using since centuries in order to carry the King. It is said that having it bring huge fortune.",
+        "fr":"Ce Tapis est utilisé depuis des siècles pour porter le Roi. On dit que l'avoir apporte une fortune énorme.",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
