--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8458,7 +8458,7 @@
         "en":"Curly (Pink)",
         "fr":"Frisé (Rose)",
         "es":"",
-        "zh-cn":"卷发(粉红)",
+        "zh-cn":"卷发(粉)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8496,7 +8496,7 @@
         "en":"Spikey (Grey)",
         "fr":"Pointu (Gris)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"刺 (灰色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8515,7 +8515,7 @@
         "en":"Spikey (Blond)",
         "fr":"Pointu (Blond)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"刺 (金色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8534,7 +8534,7 @@
         "en":"Long Ears (Blond)",
         "fr":"Longues oreilles (Blond)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"长耳朵 (金色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8553,7 +8553,7 @@
         "en":"Long Ear (Blue)",
         "fr":"Longues oreilles (Bleu)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"长耳朵 (蓝色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8572,7 +8572,7 @@
         "en":"Center Part (Black)",
         "fr":"Raie Centrale (Noir)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"中分 (黑色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8591,7 +8591,7 @@
         "en":"Center Part (Red)",
         "fr":"Raie Centrale (Rouge)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"中分 (红色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8610,7 +8610,7 @@
         "en":"Long Horn (Blond)",
         "fr":"Longue Cornes (Blond)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"长角 (金色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8629,7 +8629,7 @@
         "en":"Long Horn (Black)",
         "fr":"Longue Cornes (Noir)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"长角 (黑色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8648,7 +8648,7 @@
         "en":"Neat Bangs (Grey)",
         "fr":"Frange soignée (Gris)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"齐刘海 (灰色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8667,7 +8667,7 @@
         "en":"Neat Bangs (Red)",
         "fr":"Frange soignée (Rouge)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"齐刘海 (红色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8724,7 +8724,7 @@
         "en":"Pompon (Blond)",
         "fr":"Pompon (Blond)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"丝球 (金色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8743,7 +8743,7 @@
         "en":"Pompon (Green)",
         "fr":"Pompon (Vert)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"丝球 (绿色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8762,7 +8762,7 @@
         "en":"Cat Ears (Blond)",
         "fr":"Oreilles de chat (Blond)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"猫耳 (金色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8781,7 +8781,7 @@
         "en":"Cat Ears (Pink)",
         "fr":"Oreilles de chat (Rose)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"猫耳 (粉色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8800,7 +8800,7 @@
         "en":"Tilted Frisette (Red)",
         "fr":"Frisette Inclinée (Rouge)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"斜刘海 (红色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8819,7 +8819,7 @@
         "en":"Tilted Frisette (Purple)",
         "fr":"Frisette Inclinée (Violet)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"斜刘海 (紫色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8838,7 +8838,7 @@
         "en":"Rabbit Ears (Blond)",
         "fr":"Oreilles de Lapin (Blond)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"兔耳 (金色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8857,7 +8857,7 @@
         "en":"Rabbit Ears (Grey)",
         "fr":"Oreilles de Lapin (Gris)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"兔耳 (灰色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8933,7 +8933,7 @@
         "en":"NONAME",
         "fr":"Sans nom",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"NONAME",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8952,7 +8952,7 @@
         "en":"NONAME",
         "fr":"Sans nom",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"NONAME",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8971,7 +8971,7 @@
         "en":"NONAME",
         "fr":"Sans nom",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"NONAME",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8990,7 +8990,7 @@
         "en":"NONAME",
         "fr":"Sans nom",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"NONAME",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9009,7 +9009,7 @@
         "en":"Bat Ears (Black)",
         "fr":"Oreilles de chauve-souris (Noir)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"蝙蝠耳朵 (黑色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9028,7 +9028,7 @@
         "en":"Bat Ears (Blond)",
         "fr":"Oreilles de chauve-souris (Blond)",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"蝙蝠耳朵 (金色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9047,7 +9047,7 @@
         "en":"Carnival",
         "fr":"Carnaval",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"嘉年华",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9142,7 +9142,7 @@
         "en":"Golden Pegasus / Pandora",
         "fr":"Golden Pegasus / Pandora",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"金色珀伽索斯 / 潘多拉",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9161,7 +9161,7 @@
         "en":"Wizard Hat",
         "fr":"Chapeau de sorcier",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"巫师帽",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9180,7 +9180,7 @@
         "en":"Dragon Skull",
         "fr":"Crâne de dragon",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"龙之头骨",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -12182,7 +12182,7 @@
         "en":"Rockcord",
         "fr":"Rochecorde",
         "es":"",
-        "zh-cn":"岩",
+        "zh-cn":"岩髓",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -12258,7 +12258,7 @@
         "en":"Earthcord",
         "fr":"Tercorde",
         "es":"",
-        "zh-cn":"土",
+        "zh-cn":"地髓",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -12277,7 +12277,7 @@
         "en":"Firecord",
         "fr":"Lavcorde",
         "es":"",
-        "zh-cn":"火",
+        "zh-cn":"炎髓",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -12296,7 +12296,7 @@
         "en":"Woodcord",
         "fr":"Boiscorde",
         "es":"",
-        "zh-cn":"木",
+        "zh-cn":"木髓",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -18108,6 +18108,25 @@
         "jp":"",
         "pt":"",
         "vi":"Nguyên Liệu Trang Bị Cấp 60 Tư Chất A",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.20002.description":{
+        "en":"<i>It is said that this potion can reveal things that are hidden in plain sight</i>",
+        "fr":"<i>Il est dit que cette potion peut révéler des choses cachées à la vue de tous</i>",
+        "es":"",
+        "zh-cn":"<i>据说这种药水可以揭示隐藏在暗中的东西</i>",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
