--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -155,7 +155,7 @@
         "en":"Points Left",
         "fr":"Points Restants",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"剩余点数",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -208,11 +208,30 @@
         "th":"",
         "id":"Status ENCH"
     },
+    "tooltip.item.bonus-reward":{
+        "en":"Bonus Reward",
+        "fr":"Récompenses Bonus",
+        "es":"",
+        "zh-cn":"赏金奖励",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "tooltip.item.maxCarried":{
         "en":"Max Items Carried",
         "fr":"Maximum Transporté",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"最大携带物品数",
         "zh-tw":"",
         "kr":"",
         "ru":"",
