--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1348,6 +1348,44 @@
         "th":"",
         "id":""
     },
+    "UI.stat.HOLY_DEF":{
+        "en":"Holy Defence",
+        "fr":"Défenses sacrée",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.stat.HOLY_DEF.short":{
+        "en":"Holy DEF",
+        "fr":"DEF Sacrée",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.stat.LUCK":{
         "en":"Luck",
         "fr":"Chance",
