--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -173,8 +173,8 @@
     "UI.chat.btn.send":{
         "en":"Send",
         "fr":"Envoyer",
-        "es":"发送",
-        "zh-cn":"",
+        "es":"",
+        "zh-cn":"发送",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1348,6 +1348,44 @@
         "th":"",
         "id":""
     },
+    "UI.stat.HOLY_DEF":{
+        "en":"Holy Defence",
+        "fr":"Défenses sacrée",
+        "es":"",
+        "zh-cn":"神圣防御",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.stat.HOLY_DEF.short":{
+        "en":"Holy DEF",
+        "fr":"DEF Sacrée",
+        "es":"",
+        "zh-cn":"神圣防御",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.stat.LUCK":{
         "en":"Luck",
         "fr":"Chance",
@@ -1465,8 +1503,8 @@
     "UI.windows.quest-list.tab.available":{
         "en":"Available",
         "fr":"Disponible",
-        "es":"可接取",
-        "zh-cn":"",
+        "es":"",
+        "zh-cn":"可接取",
         "zh-tw":"",
         "kr":"",
         "ru":"Доступно",
@@ -1503,8 +1541,8 @@
     "UI.windows.quest-list.reward":{
         "en":"Quest Reward",
         "fr":"Récompense de Quête",
-        "es":"任务奖励",
-        "zh-cn":"",
+        "es":"",
+        "zh-cn":"任务奖励",
         "zh-tw":"",
         "kr":"",
         "ru":"Награда за задание",
@@ -3271,7 +3309,7 @@
         "en":"Teleport to this map will cost: {0} x1",
         "fr":"La téléportation à cet endroit coûtera: {0} x1",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"传送到此地图需要花费: {0} x1",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4829,7 +4867,7 @@
         "en":"Join in EXP Instance",
         "fr":"Rejoins l'Instance d'EXP",
         "es":"",
-        "zh-cn":"完成经验副本",
+        "zh-cn":"参加经验副本",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4848,7 +4886,7 @@
         "en":"Join in Attendant's Training",
         "fr":"Rejoins la Formation des Serviteurs",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"参加随从培训",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4867,7 +4905,7 @@
         "en":"Do 2 <span title='Do 2 Werewolf, Masquerade or Battlefield'>events</span>",
         "fr":"Participez à 2 <span title='Loup-garou, Masquerade, ou Champ de bataille'>evènement</span>",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"参与2次 <span title='参与其二:狼人狩猎,假面舞会or荣誉战场'>事件</span>",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4962,7 +5000,7 @@
         "en":"Fight in the Inter-Server Arena",
         "fr":"Combattez dans l'arène Inter-Serveurs",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"在区竞技场决斗",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -5361,7 +5399,7 @@
         "en":"Operation",
         "fr":"Opération",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"活动",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -5684,7 +5722,7 @@
         "en":"Leader",
         "fr":"Chef",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"队长",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -5703,7 +5741,7 @@
         "en":"Member",
         "fr":"Membre",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"队员",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -5722,7 +5760,7 @@
         "en":"Auto Mode",
         "fr":"Mode Auto",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"自动模式",
         "zh-tw":"",
         "kr":"",
         "ru":"",
