--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8458,7 +8458,7 @@
         "en":"Curly (Pink)",
         "fr":"Frisé (Rose)",
         "es":"",
-        "zh-cn":"卷发(粉)",
+        "zh-cn":"卷发(粉红)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8933,7 +8933,7 @@
         "en":"NONAME",
         "fr":"Sans nom",
         "es":"",
-        "zh-cn":"NONAME",
+        "zh-cn":"无名",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8952,7 +8952,7 @@
         "en":"NONAME",
         "fr":"Sans nom",
         "es":"",
-        "zh-cn":"NONAME",
+        "zh-cn":"无名",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8971,7 +8971,7 @@
         "en":"NONAME",
         "fr":"Sans nom",
         "es":"",
-        "zh-cn":"NONAME",
+        "zh-cn":"无名",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8990,7 +8990,7 @@
         "en":"NONAME",
         "fr":"Sans nom",
         "es":"",
-        "zh-cn":"NONAME",
+        "zh-cn":"无名",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9009,7 +9009,7 @@
         "en":"Bat Ears (Black)",
         "fr":"Oreilles de chauve-souris (Noir)",
         "es":"",
-        "zh-cn":"蝙蝠耳朵 (黑色)",
+        "zh-cn":"蝙蝠耳 (黑色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9028,7 +9028,7 @@
         "en":"Bat Ears (Blond)",
         "fr":"Oreilles de chauve-souris (Blond)",
         "es":"",
-        "zh-cn":"蝙蝠耳朵 (金色)",
+        "zh-cn":"蝙蝠耳 (金色)",
         "zh-tw":"",
         "kr":"",
         "ru":"",
