--- a/Translation/map.json
+++ b/Translation/map.json
@@ -193,7 +193,7 @@
         "en":"Molten Arena",
         "fr":"Arène en Fusion",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"熔岩竞技场",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1029,7 +1029,7 @@
         "en":"Fiery Tower 1st floor",
         "fr":"Tour de Feu 1er etage",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"炎魔之塔1层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1048,7 +1048,7 @@
         "en":"Fiery Tower 2nd floor",
         "fr":"Tour de Feu 2em etage",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"炎魔之塔2层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1067,7 +1067,7 @@
         "en":"Fiery Tower 3rd floor",
         "fr":"Tour de Feu 3em etage",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"炎魔之塔3层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1086,7 +1086,7 @@
         "en":"Fiery Tower 4th floor",
         "fr":"Tour de Feu 4em etage",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"炎魔之塔4层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1105,7 +1105,7 @@
         "en":"Fiery Tower Scorching Path",
         "fr":"Tour de Feu Sentier Brûlant",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"炎魔之塔灼热小道",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1124,7 +1124,7 @@
         "en":"Fiery Tower Scorching Wrath",
         "fr":"Tour de Feu Courroux Ardent",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"炎魔之塔灼热神殿",
         "zh-tw":"",
         "kr":"",
         "ru":"",
