--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -231,7 +231,7 @@
         "en":"Max Items Carried",
         "fr":"Maximum Transporté",
         "es":"",
-        "zh-cn":"最大携带物品数",
+        "zh-cn":"物品携带上限",
         "zh-tw":"",
         "kr":"",
         "ru":"",
