--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -155,7 +155,7 @@
         "en":"Points Left",
         "fr":"Points Restants",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"剩余点数",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -212,7 +212,7 @@
         "en":"Bonus Reward",
         "fr":"Récompenses Bonus",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"赏金奖励",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -231,7 +231,7 @@
         "en":"Max Items Carried",
         "fr":"Maximum Transporté",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"物品携带上限",
         "zh-tw":"",
         "kr":"",
         "ru":"",
