--- a/Translation/map.json
+++ b/Translation/map.json
@@ -379,6 +379,25 @@
         "th":"",
         "id":""
     },
+    "map.C1_Kerr_s_Chamber.name":{
+        "en":"Kerr's Chamber",
+        "fr":"Chambre de Kerr",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.Celebeam Hall of Elite.name":{
         "en":"Celebeam Hall of Elite",
         "fr":"Celebeam Hall d'Élite",
