--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -6083,7 +6083,7 @@
         "en":"Transfert",
         "fr":"Transferer",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"转移",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -6102,7 +6102,7 @@
         "en":"Embed Gem",
         "fr":"Gemmes",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"宝石镶嵌",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -6501,7 +6501,7 @@
         "en":"Unselect all",
         "fr":"Tout déselectionner",
         "es":"",
-        "zh-cn":"全不选",
+        "zh-cn":"取消全选",
         "zh-tw":"",
         "kr":"",
         "ru":"",
