--- a/Translation/map.json
+++ b/Translation/map.json
@@ -155,7 +155,7 @@
         "en":"Cain Airport",
         "fr":"Aéroport de Kane",
         "es":"",
-        "zh-cn":"凯恩王城",
+        "zh-cn":"凯恩空港",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -383,7 +383,7 @@
         "en":"Kerr's Chamber",
         "fr":"Chambre de Kerr",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"克尔之屋",
         "zh-tw":"",
         "kr":"",
         "ru":"",
