--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -3,7 +3,7 @@
         "en":"Base attack",
         "fr":"Attaque de base",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"普通攻击",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -22,7 +22,7 @@
         "en":"Base attack",
         "fr":"Attaque de base",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"普通攻击",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -41,7 +41,7 @@
         "en":"Base attack",
         "fr":"Attaque de base",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"普通攻击",
         "zh-tw":"",
         "kr":"",
         "ru":"",
