--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -6174,6 +6174,44 @@
         "th":"",
         "id":""
     },
+    "UI.windows.fortify.use-no-bound":{
+        "en":"Use no bounded items",
+        "fr":"N'utilisez pas d'objet lié",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.fortify.use-bound-warn":{
+        "en":"Warning! Using the bound items option will bind the gear, even is you don't have any bound items on you.",
+        "fr":"Attention! L'utilisation de l'option 'Objet liés' lieras l'equipement, même si vous n'avez pas d'objet liés sur vous.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.fortify.button.upgrade":{
         "en":"Upgrade",
         "fr":"Renforcer",
