--- a/Translation/map.json
+++ b/Translation/map.json
@@ -683,6 +683,25 @@
         "th":"",
         "id":""
     },
+    "map.C2_Desert_Competition.name":{
+        "en":"Desert Competition Zone",
+        "fr":"Zone de Défi du désert",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.C2_Muradin_Suburb.name":{
         "en":"Muradin Suburb",
         "fr":"Banlieue de Muradin",
